--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,26 +12,6 @@ env:
   GO_VERSION: 1.20
 
 jobs:
-  mod:
-    name: Module Download
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set Mod Cache
-        id: mod-cache
-        uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: mod-${{ hashFiles('**/go.sum') }}
-      - name: Setup Go
-        if: steps.mod-cache.outputs.cache-hit != 'true'
-        uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION }}
-      - name: Module Download
-        if: steps.mod-cache.outputs.cache-hit != 'true'
-        run: go mod download
   lint:
     name: Lint
     runs-on: ubuntu-latest
@@ -43,7 +23,6 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [mod]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -51,17 +30,12 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: Set Mod Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: mod-${{ hashFiles('**/go.sum') }}
       - name: Build
-        run: go build
+        run: go mod download && go build
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: [mod]
+    needs: [build]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -69,10 +43,5 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: ${{ env.GO_VERSION }}
-      - name: Set Mod Cache
-        uses: actions/cache@v3
-        with:
-          path: ~/go/pkg/mod
-          key: mod-${{ hashFiles('**/go.sum') }}
       - name: Run Test
         run: go test ./... -v
