--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,9 +29,11 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version: ${{ env.GO_VERSION }}]
+      - name: Mod Download
+        run: go mod download
       - name: Build
-        run: go mod download && go build
+        run: go build
   test:
     name: Test
     runs-on: ubuntu-latest
