--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}]
+          go-version: ${{ env.GO_VERSION }}
       - name: Mod Download
         run: go mod download
       - name: Build
