--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,9 +8,6 @@ on:
     branches:
       - main
 
-env:
-  GO_VERSION: '1.20'
-
 jobs:
   lint:
     name: Lint
@@ -18,8 +15,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3.7.0
+      - name: Run golangci-lint
+        uses: reviewdog/action-golangci-lint@v2
+        with:
+          go_version_file: go.mod
+          fail_on_error: true
+          filter_mode: nofilter
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -29,7 +30,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: go.mod
       - name: Mod Download
         run: go mod download
       - name: Build
@@ -44,6 +45,6 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: go.mod
       - name: Run Test
         run: go test ./... -v
