increased timeout limit

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,6 +21,7 @@ jobs:
           go_version_file: go.mod
           fail_on_error: true
           filter_mode: nofilter
+          golangci_lint_flags: --timeout=10m
   build:
     name: Build
     runs-on: ubuntu-latest
