--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -28,3 +28,8 @@ linters-settings:
 
 issues:
   exclude-use-default: false
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - containedctx
+        - funlen
